[gd_scene load_steps=2 format=3 uid="uid://buiqwki4t36hb"]

[ext_resource type="Script" path="res://Scripts/level_menu.gd" id="1_8jxj8"]

[node name="level_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8jxj8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.027451, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Easy" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Start the game with 7 cards, enemies only get 3.
"
text = "Easy"
vertical_icon_alignment = 0

[node name="Medium" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Start the game with 5 cards, players and enemies alike."
text = "Medium"
vertical_icon_alignment = 0

[node name="Hard" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "You only get 3 cards. Tech be with you."
text = "Hard"
vertical_icon_alignment = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Back"
vertical_icon_alignment = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Back" to="." method="_on_back_pressed"]
